[project]
name = "airflow-dags"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
runtime = [
  "apache-airflow==3.2.1",
  "apache-airflow-providers-fab",
  "apache-airflow-providers-hashicorp",
  "apache-airflow-providers-postgres",
  "apache-airflow-providers-smtp",
  "apache-airflow-providers-telegram",
  "psycopg[binary]",
  "playwright",
]
dev = [
  { include-group = "runtime" },
  "pytest",
  "ruff",
]

[tool.uv]
default-groups = ["runtime", "dev"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "dags",
]
testpaths = [
  "tests",
]
