[project]
name = "airflow-dags"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
runtime = [
  "apache-airflow[celery,fab,hashicorp,ldap,postgres,smtp,telegram]==3.2.1",
  "psycopg[binary]",
  "playwright",
]
dev = [
  { include-group = "runtime" },
  "pytest",
  "ruff",
]

[tool.uv]
default-groups = ["runtime", "dev"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "dags",
]
testpaths = [
  "tests",
]
